--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "axios": "^1.1.3",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-auto-image-slider": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-slideshow-image": "^4.0.5",
     "react-toastify": "^9.0.8",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
