--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bk_client",
-  "homepage": "https://Bruc3Wayne666.github.io/deploy_test/",
+  "homepage": "https://Bruc3Wayne666.github.io/deploy_test",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
