--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bk_client",
+  "homepage": "https://Bruc3Wayne666.github.io/deploy_test",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
