--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "bk_client",
-  "homepage": "https://Bruc3Wayne666.github.io/deploy_test",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -14,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
     "gh-pages": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
