--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gh-pages": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-gradient-text": "^0.1.0",
