--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
