--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-gradient-text": "^0.1.0",
+    "react-helmet": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
